--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <table cellpadding="0" cellspacing="0" border="0" width="190" class="graffino-table graffino-text no-margin no-padding" >
         <tbody>
             <tr>
@@ -152,5 +154,5 @@
     <br class="clear" style="clear: both;">
     <br>
     <p>&nbsp;</p>
-
-
+</body>
+</html>
