--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html>
+<head></head>
 <body>
 <table cellpadding="0" cellspacing="0" border="0" width="190" class="graffino-table graffino-text no-margin no-padding" >
         <tbody>
